--- a/c-api/Cargo.toml
+++ b/c-api/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 workspace = ".."
 
 [lib]
-name = "resvg"
+name = "resvg_rhino"
 path = "lib.rs"
 crate-type = ["cdylib", "staticlib"]
 
